--- a/trunk/res/values/strings.xml
+++ b/trunk/res/values/strings.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="hello">Hello World, CacheList!</string>
+    <string name="hello">Test CacheList!</string>
     <string name="app_name">Cacher's Delight</string>
 </resources>
